--- a/CH_5_Redux/package.json
+++ b/CH_5_Redux/package.json
@@ -18,6 +18,8 @@
     "babel-polyfill": "^6.13.0",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
+    "redux-logger": "^2.6.1",
+    "redux-promise": "^0.5.3",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.15.0"
   }
